tests/error/array_errors/new_array_elem_mismatch2.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def main() -> None:
13:        array(1, False)
                    ^^^^^
GuppyTypeError: Expected expression of type `int`, got `bool`
